--- a/index.html
+++ b/index.html
@@ -38,12 +38,15 @@
         <span class="skill">Python</span>
         <span class="skill">JavaScript</span>
         <span class="skill">OpenGL / PyOpenGL</span>
-        <span class="skill">GLSL / Metal</span>
+        <span class="skill">GLSL</span>
+        <span class="skill">OpenCV</span>
+        <span class="skill">Numpy</span>
         <span class="skill">FFmpeg</span>
+        <span class="skill">Tensorflow</span>
         <span class="skill">Premiere Pro</span>
         <span class="skill">After Effects</span>
+        <span class="skill">Blender</span>
         <span class="skill">Ableton</span>
-        <span class="skill">SAM Model</span>
       </div>
     </section>
 
@@ -54,37 +57,25 @@
         <!-- RoughCut -->
         <div class="card">
           <h4>RoughCut</h4>
-          <p>A Premiere Pro plugin to automate editing workflows.</p>
+          <p>Premiere Pro plugin to automate editing</p>
           <div class="video-wrapper">
-            <video controls poster="video-placeholder.jpg">
-              <source src="roughcut-placeholder.mp4" type="video/mp4">
-              Your browser does not support the video tag.
-            </video>
+            <iframe src="https://www.youtube.com/embed/NDnA_LuqVZ0?si=QGZGcrRh_GKMkfHN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           </div>
-          <p>A Premiere Pro plugin to automate editing workflows.</p>
+          <p>PremiereGal's video about RoughCut</p>
           <div class="video-wrapper">
-            <video controls poster="video-placeholder.jpg">
-              <source src="roughcut-placeholder.mp4" type="video/mp4">
-              Your browser does not support the video tag.
-            </video>
+            <iframe src="https://www.youtube.com/embed/MahBI02jWpI?si=q2ifJYT9ydSwLs0F" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           </div>
         </div>
         <!-- MixDev -->
         <div class="card">
           <h4>MixDev</h4>
-          <p>A mixed media animation engine with video examples.</p>
+          <p>Building a mixed media animation engine</p>
           <div class="video-wrapper">
-            <video controls poster="video-placeholder.jpg">
-              <source src="mixdev-placeholder.mp4" type="video/mp4">
-              Your browser does not support the video tag.
-            </video>
+            <iframe src="https://www.youtube.com/embed/uzcawnVOehw?si=vrJcuNVtf1KYa5fq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           </div>
-          <p>A mixed media animation engine with video examples.</p>
+          <p>Video effect examples</p>
           <div class="video-wrapper">
-            <video controls poster="video-placeholder.jpg">
-              <source src="mixdev-placeholder.mp4" type="video/mp4">
-              Your browser does not support the video tag.
-            </video>
+            <iframe src="https://www.youtube.com/embed/x50wUnvGc0w?si=RTUcpxNrG08vcoYJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           </div>
         </div>
       </div>
@@ -94,27 +85,26 @@
     <section id="work" class="section">
       <h3>Work Experience Highlights</h3>
       <div class="cards-container">
-        <!-- Zoomerang -->
         <div class="card">
           <h4>Zoomerang</h4>
-          <p>Worked on real-time video effects and UI integrations.</p>
-          <div class="video-wrapper">
-            <iframe src="https://www.youtube.com/embed/UaauX95Tmnw?si=DWM-BA6A8ZJp6kYs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-          </div>
+          <p>Worked on real-time video effects</p>
           <div class="video-wrapper">
             <iframe src="https://www.youtube.com/embed/NZU1apuWaPE?si=PjWsy2Ly5XrGxN8V" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           </div>
-
+          <p>Developed more then 250 GLSL shaders</p>
+          <div class="video-wrapper">
+            <iframe src="https://www.youtube.com/embed/D4rPYr7ap00?si=IVGnpDrRSEYHXJaB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          </div>
         </div>
-        <!-- GoPro -->
         <div class="card">
           <h4>GoPro</h4>
-          <p>Developed the HYPE Theme for GoPro's Quik app.</p>
+          <p>Developed HYPE Theme for GoPro's Quik</p>
           <div class="video-wrapper">
-            <iframe src="https://www.youtube.com/embed/Fj7dgIZY6to?si=yb1IXICUsMr1iWHd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/VCt878jdSQA?si=rOZ8yNk9Xjd1cmrh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           </div>
-          <div class="video-wrapper">
-            <iframe src="https://www.youtube.com/embed/Fj7dgIZY6to?si=yb1IXICUsMr1iWHd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <p>Worked on 360 video reframing effects</p>
+          <div class="video-wrapper">            
+            <iframe src="https://www.youtube.com/embed/b1wz3LKfmuo?si=n25jgvtNJI9ZDBiL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           </div>
         </div>
       </div>
